--- a/cuepoints.html
+++ b/cuepoints.html
@@ -1,1 +1,4 @@
-<vg-cuepoint ng-repeat="cuepoint in cuepoints.points" ng-click="onCuePointClick(cuepoint)" style="left: {{calcLeft(cuepoint)}}%;"></vg-cuepoint>
+<vg-cuepoint ng-repeat="cuepoint in cuepoints.points"
+              ng-click="onCuePointClick(cuepoint)"
+              tooltip-placement="top" tooltip-html="cuepoint.htmlTooltip" tooltip-append-to-body="true"
+              style="left: {{calcLeft(cuepoint)}}%;"></vg-cuepoint>
