remove append to body

--- a/cuepoints.html
+++ b/cuepoints.html
@@ -1,4 +1,4 @@
 <vg-cuepoint ng-repeat="cuepoint in cuepoints.points"
               ng-click="onCuePointClick(cuepoint)"
-              tooltip-placement="top" tooltip-html="cuepoint.htmlTooltip" tooltip-append-to-body="true"
+              tooltip-placement="top" tooltip-html="cuepoint.htmlTooltip"
               style="left: {{calcLeft(cuepoint)}}%;"></vg-cuepoint>
